--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -200,7 +200,7 @@
       <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
       <section class="text-center">
-        <h1 class="font-main-heading text-h1-mobile">
+        <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Er du sensitiv over for stærk blomsterduft?
         </h1>
         <article
