--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -122,7 +122,7 @@
       <!-- PROGRESS BAR START -->
       <section>
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-l-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
         >
           <div class="full_bar">
             <div>
@@ -175,11 +175,11 @@
       <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
       <section class="text-center">
-        <h1 class="font-main-heading text-h1-mobile">
+        <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Hvilken størrelse buket ønsker du?
         </h1>
         <p
-          class="mx-auto py-l-spacing-mobile text-left font-font-body text-body-mobile"
+          class="mx-auto py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-1/2 lg:py-l-spacing-desktop lg:text-body-desktop"
         >
           Du kan vælge mellem 4 forskellige størrelser af buket; mini, lille,
           mellem og stor. Størrelsen har ingen påvirkning på designet af
@@ -188,7 +188,9 @@
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
-      <section class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile">
+      <section
+        class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile lg:pb-l-spacing-desktop"
+      >
         <!-- CARD 1 -->
         <article
           class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
@@ -295,7 +297,9 @@
       </section>
 
       <!---------------------------------------------- TREDJE SEKTION -->
-      <section class="flex place-content-center pb-xxl-spacing-mobile">
+      <section
+        class="flex place-content-center pb-xxl-spacing-mobile lg:pb-xxl-spacing-desktop"
+      >
         <a href="abonnement2.html"
           ><button
             class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
