--- a/src/kurv.html
+++ b/src/kurv.html
@@ -305,13 +305,19 @@
       </section>
       <a href="banner_test.html">banner</a>
     </main>
-    <footer>
-      <article>
-        <div class="desktop">
-          <section class="butikker">
-            <h4>BUTIKKER</h4>
+    <footer
+      class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
+    >
+      <article
+        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
+      >
+        <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
+          <section
+            class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+          >
+            <h4 class="text-h4-mobile lg:text-h4-desktop">BUTIKKER</h4>
 
-            <div class="adresser">
+            <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
               <div class="strandvejen">
                 <p>Strandvejen 167</p>
                 <p>2900 Hellerup</p>
@@ -338,8 +344,10 @@
             </div>
           </section>
 
-          <section class="informationer">
-            <h4>INFORMATIONER</h4>
+          <section
+            class="informationer grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+          >
+            <h4 class="text-h4-mobile lg:text-h4-desktop">INFORMATIONER</h4>
             <div>
               <a href="#">Om os</a>
             </div>
@@ -351,10 +359,14 @@
             </div>
           </section>
 
-          <section class="abningstider">
-            <h4>ÅBNINGSTIDER</h4>
-            <div class="tider">
-              <div class="dage">
+          <section
+            class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+          >
+            <h4 class="text-h4-mobile lg:text-h4-desktop">ÅBNINGSTIDER</h4>
+            <div class="tider grid grid-cols-2">
+              <div
+                class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
+              >
                 <p>Mandag</p>
                 <p>Tirsdag</p>
                 <p>Onsdag</p>
@@ -363,7 +375,9 @@
                 <p>Lørdag</p>
                 <p>Søndag</p>
               </div>
-              <div class="tidspunkter">
+              <div
+                class="tidspunkter grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
+              >
                 <p>10 - 18</p>
                 <p>10 - 18</p>
                 <p>10 - 18</p>
@@ -375,9 +389,13 @@
             </div>
           </section>
 
-          <section class="folgosher">
-            <h4>FØLG OS HER</h4>
-            <div class="ikoner">
+          <section
+            class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
+          >
+            <h4 class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop">
+              FØLG OS HER
+            </h4>
+            <div class="ikoner flex place-content-center gap-m-spacing-mobile">
               <svg width="40" height="40" viewBox="0 0 48 48">
                 <g fill="none" fill-rule="evenodd" clip-rule="evenodd">
                   <path
@@ -407,11 +425,13 @@
           </section>
         </div>
 
-        <section class="nederst">
+        <section
+          class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile"
+        >
           <p>CVR: 35649328</p>
-          <a href="#">Cookiepolitik</a>
-          <a href="#">Privatlivspolitik</a>
-          <a href="#">Handelsbetingelser</a>
+          <a class="cursor-pointer underline" href="#">Cookiepolitik</a>
+          <a class="cursor-pointer underline" href="#">Privatlivspolitik</a>
+          <a class="cursor-pointer underline" href="#">Handelsbetingelser</a>
         </section>
       </article>
     </footer>
