--- a/src/betal_bekraeft.html
+++ b/src/betal_bekraeft.html
@@ -405,17 +405,23 @@
           </section>
 
           <section
-            class="informationer grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+            class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
-            <h4 class="text-h4-mobile lg:text-h4-desktop">INFORMATIONER</h4>
-            <div>
-              <a href="#">Om os</a>
-            </div>
-            <div>
-              <a href="#">Kontakt os</a>
-            </div>
-            <div>
-              <a href="#">Sitemap</a>
+            <h4
+              class="text-h4-mobile lg:pb-l-spacing-desktop lg:text-h4-desktop"
+            >
+              INFORMATIONER
+            </h4>
+            <div class="mx-auto">
+              <div class="text-start underline lg:pb-l-spacing-desktop">
+                <a href="#">Om os</a>
+              </div>
+              <div class="text-start underline lg:pb-l-spacing-desktop">
+                <a href="#">Kontakt os</a>
+              </div>
+              <div class="text-start underline lg:pb-l-spacing-desktop">
+                <a href="#">Sitemap</a>
+              </div>
             </div>
           </section>
 
@@ -486,7 +492,7 @@
         </div>
 
         <section
-          class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile"
+          class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
           <p>CVR: 35649328</p>
           <a class="cursor-pointer underline" href="#">Cookiepolitik</a>
